<resources>
    <string name="app_name">Abx</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="titulo_menu">Grupo ABX</string>
    <string name="title_activity_act_nueva_cotizacion">Nueva cotizacion</string>
    <string name="title_activity_act_articulos">Articulos</string>
    <string name="title_activity_act_cotizaciones">Cotizaciones</string>
    <string name="title_activity_act_descripcion_cotizacion">Descripción</string>

    <string name="et_nombre">Nombre</string>
    <string name="et_descripcion">Descripción</string>
    <string name="btn_guardar">Guardar</string>
    <string name="tv_nombre">Nombre de la cotización</string>
    <string name="tv_descripcion">Descripción adicional de la cotización</string>

    <string name="titulo_descripcion">Nombre cotización</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="btn_compartir">Compartir</string>
    <string name="btn_facturar">Facturar</string>
    <string name="btn_agregar">+</string>
    <string name="tv_subtotal">Subtotal</string>
    <string name="tv_r_subtotal">0.0</string>
    <string name="tv_iva">IVA</string>
    <string name="tv_r_iva">0.0</string>
    <string name="tv_total">Total</string>
    <string name="tv_r_total">0.0</string>


    //Introduccion
    <string name="txt_1">¿Qué es?</string>
    <string name="txt_2">Grupo de personas comprometidas con el cliente, personas al que cada reto se facinan, no se quiebran, solucionadores de problemas en pocas palabras. Somos exigentes y queremos que ocurran las cosas que no han sucedido.</string>
    <string name="boton_omitir">omitir</string>
    <string name="txt_Intro_1">¿Para que sirve?</string>
    <string name="txt_Intro_2">Rellenar con informacion acerca de la empresa</string>
    <string name="txt_Intro_contacto">Contactenos</string>
    <string name="txt_Intro_info_contacto">Rellenar con informacion de contacto</string>
    //Intruccion
    <string name="boton_regresar">Regresar</string>

    <string name="tv_tit_concepto">Concepto</string>
    <string name="tv_tit_precio">Precio</string>
    <string name="tv_tit_cantidad">Cantidad</string>
    <string name="tv_tit_total">Total</string>

    <string name="tv_concepto_ac">USB</string>
    <string name="tv_precio_ac">180.00</string>
    <string name="tv_cantidad_ac">30</string>
    <string name="tv_total_ac">5400.00</string>
    <string name="title_activity_agregar_articulos_cotizacion">Descripción</string>

    <string name="et_cantidad_agregar">Cantidad</string>
    <string name="tv_articulo_agregar">Elegir articulo</string>
    <string name="tv_cantidad_agregar">Cantidad</string>

    <string name="btn_agregar_articulo">Agregar a cotización</string>
    <string name="tv_nombre_articulo">Cámara</string>

</resources>
